@@ -40,6 +40,7 @@
 -define(NS_STANZAS,      "urn:ietf:params:xml:ns:xmpp-stanzas").
 -define(NS_STREAMS,      "urn:ietf:params:xml:ns:xmpp-streams").
 
+-define(NS_TLS,          "urn:ietf:params:xml:ns:xmpp-tls").
 -define(NS_SASL,         "urn:ietf:params:xml:ns:xmpp-sasl").
 -define(NS_SESSION,      "urn:ietf:params:xml:ns:xmpp-session").
 -define(NS_BIND,         "urn:ietf:params:xml:ns:xmpp-bind").
